it's.... finally over....

--- a/emulationstation/.emulationstation/es_systems.cfg
+++ b/emulationstation/.emulationstation/es_systems.cfg
@@ -137,8 +137,8 @@
         <path>/mnt/SDCARD/Roms/DOOM/</path>
         <extension>.zip .wad .exe</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>doom</platform>
-        <theme>doom</theme>
+        <platform>prboom</platform>
+        <theme>prboom</theme>
     </system>
 
     <system>
@@ -447,8 +447,8 @@
         <path>/mnt/SDCARD/Roms/ODYSSEY/</path>
         <extension>.bin .zip .7z</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>odyssey</platform>
-        <theme>odyssey</theme>
+        <platform>odyssey2</platform>
+        <theme>odyssey2</theme>
     </system>
 
     <system>
@@ -644,25 +644,121 @@
     <system>
         <name>SUPERVISION</name>
         <fullname>Watara SuperVision</fullname>
-        <path>/mnt/SDCARD/Roms/SUPERVISION</path>
+        <path>/mnt/SDCARD/Roms/SUPERVISION/</path>
         <extension>.zip .7z .sv .bin</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
         <platform>supervision</platform>
         <theme>supervision</theme>
     </system>
 
+    <system>
+        <name>THIRTYTWOX</name>
+        <fullname>Sega 32X</fullname>
+        <path>/mnt/SDCARD/Roms/THIRTYTWOX/</path>
+        <extension>.zip .7z .gen .smd .md .32x .bin .iso .sms .68k .chd</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>sega32x</platform>
+        <theme>sega32x</theme>
+    </system>
 
+    <system>
+        <name>TIC</name>
+        <fullname>TIC-80</fullname>
+        <path>/mnt/SDCARD/Roms/TIC/</path>
+        <extension>.tic .zip .7z .fd .sap .k7 .m7 .rom</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>tic80</platform>
+        <theme>tic80</theme>
+    </system>
 
+    <system>
+        <name>VB</name>
+        <fullname>Nintendo Virtual Boy</fullname>
+        <path>/mnt/SDCARD/Roms/VB/</path>
+        <extension>.vb .vboy .zip .7Z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>virtualboy</platform>
+        <theme>virtualboy</theme>
+    </system>
 
+    <system>
+        <name>VECTREX</name>
+        <fullname>Milton Bradley Vectrex</fullname>
+        <path>/mnt/SDCARD/Roms/VECTREX/</path>
+        <extension>.vec .zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>vectrex</platform>
+        <theme>vectrex</theme>
+    </system>
+
+    <system>
+        <name>VIC20</name>
+        <fullname>Commodore VIC-20</fullname>
+        <path>/mnt/SDCARD/Roms/VIC20/</path>
+        <extension>.zip .7z .m3u .d64 .d6z .d71 .d7z .d80 .d81 .d82 .d8z .g64 .g6z .g41 .g4z .x64 .x6z .nib .nbz .d2m .d4m .t64 .tap .tcrt .prg .p00 .crt .bin .cmd .vfl .vsf .gz .20 .40 .60 .a0 .b0 .rom</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>c20</platform>
+        <theme>c20</theme>
+    </system>
+
+    <system>
+        <name>VIDEOPAC</name>
+        <fullname>Philips VideoPac+</fullname>
+        <path>/mnt/SDCARD/Roms/VIDEOPAC/</path>
+        <extension>.bin .zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>videopacplus</platform>
+        <theme>videopacplus</theme>
+    </system>
+
+    <system>
+        <name>WOLF</name>
+        <fullname>Wolfenstein 3D</fullname>
+        <path>/mnt/SDCARD/Roms/WOLF/</path>
+        <extension>.ecwolf .exe</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>ecwolf</platform>
+        <theme>ecwolf</theme>
+    </system>
+
+    <system>
+        <name>WS</name>
+        <fullname>Bandai WonderSwan</fullname>
+        <path>/mnt/SDCARD/Roms/WS/</path>
+        <extension>.ws .wsc .zip .7z .pc2</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>wswan</platform>
+        <theme>wswan</theme>
+    </system>
 
     <system>
         <name>WSC</name>
-        <fullname>Wonder Swan Color</fullname>
+        <fullname>Bandai WonderSwan Color</fullname>
         <path>/mnt/SDCARD/Roms/WSC/</path>
-        <extension>.zip .ZIP .wsc .WSC .ws .WS</extension>
+        <extension>.ws .wsc .zip .7z .pc2</extension>
         <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
-        <platform>wonderswancolor</platform>
-        <theme>wonderswancolor</theme>
+        <platform>wswanc</platform>
+        <theme>wswanc</theme>
     </system>    
+
+    <system>
+        <name>X68000</name>
+        <fullname>Sharp X68000</fullname>
+        <path>/mnt/SDCARD/Roms/X68000</path>
+        <extension>.dim .zip .img .m3u .7z .d88 .88d .hdm .dup .2hd .xdf .hdf .cmd</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>x68000</platform>
+        <theme>x68000</theme>
+    </system>
+
+    <system>
+        <name>ZXS</name>
+        <fullname>Sinclair ZX Spectrum</fullname>
+        <path>/mnt/SDCARD/Roms/</path>
+        <extension>.zip .7z .tzx .tap .z80 .rzx .scl .trd</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>zxspectrum</platform>
+        <theme>zxspectrum</theme>
+    </system>
 
 </systemList>
