--- a/RetroArch/retroarch-flip.cfg
+++ b/RetroArch/retroarch-flip.cfg
@@ -240,15 +240,15 @@ input_driver = "sdl"
 input_duty_cycle = "3"
 input_enable_hotkey = "nul"
 input_enable_hotkey_axis = "nul"
-input_enable_hotkey_btn = "nul"
+input_enable_hotkey_btn = "4"
 input_enable_hotkey_mbtn = "nul"
 input_exit_emulator = "nul"
 input_exit_emulator_axis = "nul"
-input_exit_emulator_btn = "nul"
+input_exit_emulator_btn = "0"
 input_exit_emulator_mbtn = "nul"
 input_fps_toggle = "nul"
 input_fps_toggle_axis = "nul"
-input_fps_toggle_btn = "nul"
+input_fps_toggle_btn = "2"
 input_fps_toggle_mbtn = "nul"
 input_frame_advance = "nul"
 input_frame_advance_axis = "nul"
@@ -280,13 +280,13 @@ input_joypad_driver = "sdl2"
 input_keyboard_layout = ""
 input_load_state = "nul"
 input_load_state_axis = "nul"
-input_load_state_btn = "nul"
+input_load_state_btn = "9"
 input_load_state_mbtn = "nul"
 input_max_users = "8"
 input_menu_toggle = "escape"
 input_menu_toggle_axis = "nul"
-input_menu_toggle_btn = "nul"
-input_menu_toggle_gamepad_combo = "0"
+input_menu_toggle_btn = "3"
+input_menu_toggle_gamepad_combo = "2"
 input_menu_toggle_mbtn = "nul"
 input_netplay_fade_chat_toggle = "nul"
 input_netplay_fade_chat_toggle_axis = "nul"
@@ -2758,7 +2758,7 @@ input_runahead_toggle_btn = "nul"
 input_runahead_toggle_mbtn = "nul"
 input_save_state = "nul"
 input_save_state_axis = "nul"
-input_save_state_btn = "nul"
+input_save_state_btn = "10"
 input_save_state_mbtn = "nul"
 input_screenshot = "nul"
 input_screenshot_axis = "nul"
@@ -2775,22 +2775,22 @@ input_shader_prev_btn = "nul"
 input_shader_prev_mbtn = "nul"
 input_shader_toggle = "nul"
 input_shader_toggle_axis = "nul"
-input_shader_toggle_btn = "nul"
+input_shader_toggle_btn = "11"
 input_shader_toggle_mbtn = "nul"
 input_state_slot_decrease = "nul"
 input_state_slot_decrease_axis = "nul"
-input_state_slot_decrease_btn = "nul"
+input_state_slot_decrease_btn = "13"
 input_state_slot_decrease_mbtn = "nul"
 input_state_slot_increase = "nul"
 input_state_slot_increase_axis = "nul"
-input_state_slot_increase_btn = "nul"
+input_state_slot_increase_btn = "14"
 input_state_slot_increase_mbtn = "nul"
 input_streaming_toggle = "nul"
 input_streaming_toggle_axis = "nul"
 input_streaming_toggle_btn = "nul"
 input_streaming_toggle_mbtn = "nul"
 input_toggle_fast_forward = "nul"
-input_toggle_fast_forward_axis = "nul"
+input_toggle_fast_forward_axis = "+5"
 input_toggle_fast_forward_btn = "nul"
 input_toggle_fast_forward_mbtn = "nul"
 input_toggle_fullscreen = "nul"
@@ -2798,7 +2798,7 @@ input_toggle_fullscreen_axis = "nul"
 input_toggle_fullscreen_btn = "nul"
 input_toggle_fullscreen_mbtn = "nul"
 input_toggle_slowmotion = "nul"
-input_toggle_slowmotion_axis = "nul"
+input_toggle_slowmotion_axis = "+4"
 input_toggle_slowmotion_btn = "nul"
 input_toggle_slowmotion_mbtn = "nul"
 input_toggle_statistics = "nul"
