feat(psp): update ppsspp hotkeys to match RA

--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp.ini
@@ -402,7 +402,7 @@ AnalogSensitivity = 1.100000
 AnalogIsCircular = False
 AnalogAutoRotSpeed = 8.000000
 AnalogLimiterDeadzone = 0.600000
-AllowMappingCombos = False
+AllowMappingCombos = True
 LeftStickHeadScale = 1.000000
 RightStickHeadScale = 1.000000
 HideStickBackground = False
