--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/controls.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/controls.ini
@@ -1,26 +1,27 @@
 ﻿[ControlMapping]
-Up = 1-19,10-19
-Down = 1-20,10-20
-Left = 1-21,10-21
-Right = 1-22,10-22
-Circle = 1-52,10-190
-Cross = 1-54,10-189
-Square = 1-29,10-191
-Triangle = 1-47,10-188
-Start = 1-62,10-197
-Select = 1-66,10-196
+Up = 10-19
+Down = 10-20
+Left = 10-21
+Right = 10-22
+Circle = 10-190
+Cross = 10-189
+Square = 10-191
+Triangle = 10-188
+Start = 10-197
+Select = 10-196
 L = 10-193
 R = 10-192
-An.Up = 1-37,10-4003
-An.Down = 1-39,10-4002
-An.Left = 1-38,10-4001
-An.Right = 1-40,10-4000
-Fast-forward = 1-61
+An.Up = 10-4003
+An.Down = 10-4002
+An.Left = 10-4001
+An.Right = 10-4000
+Fast-forward = 10-196:10-4010
+SpeedToggle = 10-196:10-4008
+Save State = 10-196:10-192
+Load State = 10-196:10-193
+Previous Slot = 10-196:10-21
+Next Slot = 10-196:10-22
+Screenshot = 10-196:10-190
+Exit App = 10-196:10-189
 Pause = 10-106
-Analog limiter = 1-60
-RapidFire = 1-59
-SpeedToggle = 1-68
-Rewind = 1-67
-Save State = 10-196:10-4008
-Load State = 10-196:10-4010
 Hold = 10-4
