break it the Emu way, not the App way :sweat_smile:

--- a/Emu/-CUSTOM-SYSTEM-/config.json
+++ b/Emu/-CUSTOM-SYSTEM-/config.json
@@ -1,5 +1,5 @@
-{
-  "#label": "Display Name",
+{{
+  "label": "Display Name",
   "icon": "/mnt/SDCARD/path/to/icon/while/not/selected.png",
   "iconsel": "/mnt/SDCARD/path/to/icon/while/selected.png",
   "launch": "../.emu_setup/standard_launch.sh",
