--- a/RetroArch/retroarch-flip.cfg
+++ b/RetroArch/retroarch-flip.cfg
@@ -2827,7 +2827,7 @@ keyboard_gamepad_mapping_type = "1"
 kiosk_mode_enable = "false"
 kiosk_mode_password = ""
 led_driver = "null"
-libretro_directory = "./.retroarch/cores-a133"
+libretro_directory = "./.retroarch/cores64"
 libretro_info_path = "./.retroarch/info"
 libretro_log_level = "1"
 load_dummy_on_core_shutdown = "true"
