enable RA logging

--- a/RetroArch/retroarch-flip.cfg
+++ b/RetroArch/retroarch-flip.cfg
@@ -2834,7 +2834,7 @@ load_dummy_on_core_shutdown = "true"
 location_allow = "false"
 location_driver = "null"
 log_dir = "./.retroarch/logs"
-log_to_file = "false"
+log_to_file = "true"
 log_to_file_timestamp = "false"
 memory_show = "false"
 memory_update_interval = "256"
