--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -2822,7 +2822,7 @@ load_dummy_on_core_shutdown = "true"
 location_allow = "false"
 location_driver = "null"
 log_dir = "./.retroarch/logs"
-log_to_file = "false"
+log_to_file = "true"
 log_to_file_timestamp = "false"
 log_verbosity = "true"
 materialui_landscape_layout_optimization = "1"
