--- a/Emu/SATURN/config.json
+++ b/Emu/SATURN/config.json
@@ -20,6 +20,10 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
+      "name": "Emu Core: (✓LIBRETRO)-standalone",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
+    },
+    {
       "name": "CPU Mode: (✓PERFORMANCE)-Overclock",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Overclock.sh"
     },
