Renaming Theme Nursery to Theme Garden, adding system to detect new themes and put them first

--- a/App/ThemeGallery/config.json
+++ b/App/ThemeGallery/config.json
@@ -1,5 +1,5 @@
 {
-	"label":        "Theme Nursery",
+	"label":        "Theme Garden",
 	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/icons/App/expertappswitch.png",
 	"launch":       "launch.sh",
 	"description":  "Check out the latest themes for your device!"
