--- a/Emu/GBC/config.json
+++ b/Emu/GBC/config.json
@@ -24,7 +24,7 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
-      "name": "Emu Core: (✓GAMBATTE)-mgba",
+      "name": "Emu Core: (✓GAMBATTE)-mgba-tgbdual",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
