--- a/.github/workflows/create-beta.yml
+++ b/.github/workflows/create-beta.yml
@@ -46,10 +46,10 @@ jobs:
       - name: Check for commits
         id: check_commits
         run: |
-          # Get all commits
-          COMMITS=$(git log --pretty=format:'- %s (%an)%n')
+          # Get commits from last 24 hours
+          COMMITS=$(git log --since="24 hours ago" --pretty=format:'- %s (%an)%n')
           if [ -z "$COMMITS" ]; then
-            echo "No commits found"
+            echo "No commits found in the last 24 hours"
             exit 1
           fi
           {
@@ -151,14 +151,14 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          # Get all releases sorted by created date (newest first)
-          RELEASES=$(gh api repos/spruceUI/spruceOSNightlies/releases --paginate | jq -r '.[].id')
+          # Get all beta releases
+          BETA_RELEASES=$(gh api repos/spruceUI/spruceOSNightlies/releases --paginate | jq -r '.[] | select(.tag_name | contains("-beta")) | .id')
           
-          # Convert to array and keep only releases after the first 3
+          # Convert to array and keep only the newest beta
           COUNT=0
-          for RELEASE_ID in $RELEASES; do
+          for RELEASE_ID in $BETA_RELEASES; do
             COUNT=$((COUNT + 1))
-            if [ $COUNT -gt 3 ]; then
+            if [ $COUNT -gt 1 ]; then
               gh api repos/spruceUI/spruceOSNightlies/releases/$RELEASE_ID -X DELETE
             fi
           done
