--- a/.github/workflows/create-beta.yml
+++ b/.github/workflows/create-beta.yml
@@ -3,9 +3,17 @@ name: Create Beta Release
 on:
   workflow_dispatch:
     inputs:
+      action_type:
+        description: 'Action to perform'
+        required: true
+        type: choice
+        options:
+          - create
+          - delete
+        default: 'create'
       target_branch:
         description: 'Branch to create beta from'
-        required: true
+        required: false
         default: 'Development'
         type: string
 
@@ -14,6 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    if: github.event.inputs.action_type == 'create'
     steps:
       - uses: actions/checkout@v4
         with:
@@ -162,3 +171,57 @@ jobs:
               gh api repos/spruceUI/spruceOSNightlies/releases/$RELEASE_ID -X DELETE
             fi
           done
+
+  delete-beta:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    if: github.event.inputs.action_type == 'delete'
+    steps:
+      - name: Delete beta releases
+        env:
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          # Get and delete all beta releases
+          BETA_RELEASES=$(gh api repos/spruceUI/spruceOSNightlies/releases --paginate | jq -r '.[] | select(.tag_name | contains("-Beta")) | .id')
+          for RELEASE_ID in $BETA_RELEASES; do
+            gh api repos/spruceUI/spruceOSNightlies/releases/$RELEASE_ID -X DELETE
+          done
+
+      - name: Clone and update OTA repos
+        env:
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          # Clone both repositories
+          git clone https://github.com/spruceUI/spruceui.github.io.git ota_repo
+          git clone https://github.com/spruceUI/spruceSource.git source_repo
+          
+          # Function to update OTA file
+          update_ota_file() {
+            local file="$1"
+            local content
+            content=$(cat "$file")
+            
+            # Remove BETA_ lines while preserving others
+            echo "$content" | grep -v "^BETA_" > "$file"
+          }
+          
+          # Update both OTA files
+          update_ota_file "ota_repo/OTA/spruce"
+          update_ota_file "source_repo/OTA/spruce"
+          
+          # Update primary OTA repo
+          cd ota_repo
+          git config user.name "GitHub Actions Bot"
+          git config user.email "actions@github.com"
+          git add OTA/spruce
+          git commit -m "Remove beta release information"
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/spruceUI/spruceui.github.io.git main
+          
+          # Update backup OTA repo
+          cd ../source_repo
+          git config user.name "GitHub Actions Bot"
+          git config user.email "actions@github.com"
+          git add OTA/spruce
+          git commit -m "Remove beta release information"
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/spruceUI/spruceSource.git main
