Add back smart mode for N64 my355 and tgx040 are gpu bottlenecked rather than cpu bottlenecked. Also proper core switching for saturn

--- a/Emu/N64/config.json
+++ b/Emu/N64/config.json
@@ -28,7 +28,7 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
-      "name": "CPU Mode: (✓PERFORMANCE)-Overclock",
+      "name": "CPU Mode: (✓SMART)-Performance-Overclock",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
     },
     {
