Add system json to platform vars, also use correct system json for darkhttpd

--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -3,4 +3,5 @@
 
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
+export SYSTEM_JSON="/config/system.json"
 export BATTERY="/sys/class/power_supply/battery"
