--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -3,4 +3,5 @@
 
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
+export SYSTEM_JSON="/userdata/system.json"
 export BATTERY="/sys/class/power_supply/battery"
