--- a/spruce/settings/platform/SmartPro.cfg
+++ b/spruce/settings/platform/SmartPro.cfg
@@ -3,4 +3,5 @@
 
 export DISPLAY_WIDTH="1280"
 export DISPLAY_HEIGHT="720"
+export SYSTEM_JSON="/mnt/UDISK/system.json"
 export BATTERY="/sys/class/power_supply/axp2202-battery"
