--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -18,6 +18,7 @@ maxGamesInGS=10
 n64_control_profile=Classic
 pico8_control_profile=Racing
 pico8_stretch=1
+ppsspp_pause_exit=1
 recentsTile=1
 rumble_intensity=Medium
 runGSOnGameExit=1
