--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -10,6 +10,7 @@ enableNetworkTimeSync=1
 expertRA=1
 expert_settings=1
 fake08_allow_png=1
+genesis_plus_gx_wide=1
 hold_home=Game Switcher
 idlemon_in_game=30m
 idlemon_in_menu=2m
