correct fullname for APPS

--- a/emulationstation/.emulationstation/es_systems.cfg
+++ b/emulationstation/.emulationstation/es_systems.cfg
@@ -3,7 +3,7 @@
 
     <system>
         <name>APPS</name>
-        <fullname>Commodore Amiga</fullname>
+        <fullname>Apps and Tools</fullname>
         <path>/media/sdcard0/App/-ES-APPS-/</path>
         <extension>.sh</extension>
         <command>/bin/sh %ROM%</command>
