Flip: PPSSPP config and control updates: auto frameskip 1 on; do not stretch screen; improve analog stick calibration; auto load most recent state; save state = select+R1; load state = select+L1; prev state = select+left; next state = select+right; screenshot = select+A; exit PPSSPP = select+B; fast forward = select+R2

--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-Flip.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-Flip.ini
@@ -1,18 +1,18 @@
 ﻿[General]
 FirstRun = False
-RunCount = 25
+RunCount = 1
 Enable Logging = True
 AutoRun = True
 Browse = False
 IgnoreBadMemAccess = True
-CurrentDirectory = /media/sdcard0/Emu/PPSSPP
+CurrentDirectory = /mnt/SDCARD
 ShowDebuggerOnLoad = False
 CheckForNewVersion = False
 Language = en_US
 ForceLagSync2 = False
-DiscordPresence = True
+DiscordPresence = False
 UISound = False
-AutoLoadSaveState = 0
+AutoLoadSaveState = 2
 EnableCheats = True
 CwCheatRefreshRate = 77
 CwCheatScrollPosition = 374.666626
@@ -25,8 +25,8 @@ DumpAudio = False
 SaveLoadResetsAVdumping = False
 StateSlot = 0
 EnableStateUndo = True
-StateLoadUndoGame = UCUS98653_1.00
-StateUndoLastSaveGame = UCUS98653_1.00
+StateLoadUndoGame = ULUS10457_1.00
+StateUndoLastSaveGame = ULUS10457_1.00
 StateUndoLastSaveSlot = 0
 RewindSnapshotInterval = 0
 ShowOnScreenMessage = True
@@ -103,7 +103,7 @@ DisabledGraphicsBackends =
 VulkanDevice = 
 CameraDevice = 
 UseGeometryShader = False
-SkipBufferEffects = True
+SkipBufferEffects = False
 SoftwareRenderer = False
 SoftwareRendererJit = True
 HardwareTransform = True
@@ -112,9 +112,9 @@ TextureFiltering = 1
 InternalResolution = 1
 AndroidHwScale = 1
 HighQualityDepth = 1
-FrameSkip = 0
+FrameSkip = 1
 FrameSkipType = 0
-AutoFrameSkip = False
+AutoFrameSkip = True
 StereoRendering = False
 StereoToMonoShader = RedBlue
 FrameRate = 0
@@ -132,7 +132,7 @@ DisplayOffsetY = 0.500000
 DisplayScale = 1.000000
 DisplayIntegerScale = False
 DisplayAspectRatio = 1.000000
-DisplayStretch = True
+DisplayStretch = False
 ImmersiveMode = True
 SustainedPerformanceMode = False
 IgnoreScreenInsets = True
@@ -407,10 +407,10 @@ RightAnalogStickX = 0.812500
 RightAnalogStickY = 0.807933
 RightAnalogStickScale = 1.150000
 ShowRightAnalogStick = False
-AnalogDeadzone = 0.150000
+AnalogDeadzone = 0.050000
 AnalogInverseDeadzone = 0.000000
-AnalogSensitivity = 1.100000
-AnalogIsCircular = False
+AnalogSensitivity = 1.150000
+AnalogIsCircular = True
 AnalogAutoRotSpeed = 8.000000
 AnalogLimiterDeadzone = 0.600000
 AllowMappingCombos = False
@@ -532,10 +532,6 @@ AchievementsChallengePos = 3
 AchievementsUnlockedPos = 4
 [Recent]
 MaxRecent = 60
-FileName0 = /mnt/sdcard/Roms/PSP/God of War - Chains of Olympus (USA).iso
-FileName1 = /mnt/sdcard/Roms/PSP/超级机器人大战AP.cso
-FileName2 = /mnt/sdcard/Roms/PSP/山脊赛车.iso
-FileName3 = /mnt/sdcard/Roms/PSP/God of War - Ghost of Sparta.iso
 [Log]
 SYSTEMEnabled = True
 SYSTEMLevel = 2
@@ -605,7 +601,3 @@ SCEMISCEnabled = True
 SCEMISCLevel = 2
 [PlayTime]
 ULJS00080 = 37,1501846587279770368
-UCUS98653 = 3259,1509207645337945344
-ULJS00143 = 236,1505958799813535744
-UCUS98737 = 251,1502355321373219328
-UCAS40015 = 155,1502373990331500544
