All: truncate "CPU Mode: Smart-Performance-Overclock" to "CPU: Smart-Perf-Max" in order to fit in the tiny window TrimUI gives us.

--- a/Emu/ARDUBOY/config.json
+++ b/Emu/ARDUBOY/config.json
@@ -29,7 +29,7 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
-      "name": "CPU Mode: (✓SMART)-Performance-Overclock",
+      "name": "CPU: (✓SMART)-Perf-Max",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
     },
     {
