--- a/Emu/PICO8/config.json
+++ b/Emu/PICO8/config.json
@@ -32,7 +32,7 @@
       "launch": "import.sh"
     },
     {
-      "name": "CPU Mode: (✓SMART)-Performance-Overclock",
+      "name": "CPU: (✓SMART)-Perf-Max",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/cpu_switch.sh"
     },
     {
