--- a/Emu/SATURN/config.json
+++ b/Emu/SATURN/config.json
@@ -29,7 +29,7 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/core_switch.sh"
     },
     {
-      "name": "CPU Mode: (✓PERFORMANCE)-Overclock",
+      "name": "CPU: (✓PERF)-Max",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Overclock.sh"
     },
     {
