Add device-specific modes to advanced settings; add app toggles for PortMaster and USB storage depending on these modes.

--- a/App/USBStorageMode/config.json
+++ b/App/USBStorageMode/config.json
@@ -1,5 +1,5 @@
 {
-	"label":        "Usb Storage Mode",
+	"label":        "USB Storage Mode",
 	"icon":	        "",
 	"launch":       "launch.sh",
 	"description":  "Only for Brick and A30 currently"
