--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -5,3 +5,4 @@ export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export SYSTEM_JSON="/config/system.json"
 export BATTERY="/sys/class/power_supply/battery"
+export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
