--- a/spruce/settings/platform/Brick.cfg
+++ b/spruce/settings/platform/Brick.cfg
@@ -5,3 +5,4 @@ export DISPLAY_WIDTH="1024"
 export DISPLAY_HEIGHT="768"
 export SYSTEM_JSON="/mnt/UDISK/system.json"
 export BATTERY="/sys/class/power_supply/axp2202-battery"
+export LED_PATH=""
