--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -5,4 +5,4 @@ export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
 export SYSTEM_JSON="/userdata/system.json"
 export BATTERY="/sys/class/power_supply/battery"
-export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
+export LED_PATH="/sys/class/leds/work"
