--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -6,3 +6,32 @@ export DISPLAY_HEIGHT="480"
 export SYSTEM_JSON="/config/system.json"
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
+
+# Keycodes
+
+export B_POWER="1 116"
+
+export B_LEFT="1 105 1"
+export B_RIGHT="1 106 1"
+export B_UP="1 103 1"
+export B_DOWN="1 108 1"
+
+export B_A="1 57"
+export B_B="1 29"
+export B_X="1 42"
+export B_Y="1 56"
+
+export B_L1="1 15"
+export B_L2="1 18"
+export B_R1="1 14"
+export B_R2="1 20"
+
+export B_START="1 28"
+export B_START_2="enter_pressed" # only registers 0 on release, no 1 on press
+export B_SELECT="1 97"
+export B_SELECT_2="rctrl_pressed"
+
+export B_VOLUP="volume up"       # only registers on press and on change, not on release. No 1 or 0.
+export B_VOLDOWN="1 114"     # has actual key codes like the buttons
+export B_VOLDOWN_2="volume down" # only registers on change. No 1 or 0.
+export B_MENU="1 1"          # surprisingly functions like a regular button
