Flip: Use correct event* for watchdog, add 64 bit switcher binaries

--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -7,6 +7,9 @@ export SYSTEM_JSON="/config/system.json"
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
 
+export EVENT_PATH_KEYBOARD="/dev/input/event3"
+export EVENT_PATH_JOYPAD="/dev/input/event4"
+
 # Keycodes
 
 export B_POWER="1 116"
