--- a/spruce/settings/platform/Brick.cfg
+++ b/spruce/settings/platform/Brick.cfg
@@ -11,6 +11,9 @@ export PYSDL2_DLL_PATH="/mnt/sdcard/MIYOO_EX/site-packages/sdl2dll/dll"
 export PATH="/mnt/sdcard/MIYOO_EX/bin/:$PATH"
 export HOME="/mnt/sdcard"
 
+export EVENT_PATH_KEYBOARD="/dev/input/event3"
+export EVENT_PATH_JOYPAD="/dev/input/event4"
+
 # Keycodes
 
 export B_POWER="1 116"
