--- a/spruce/settings/platform/SmartPro.cfg
+++ b/spruce/settings/platform/SmartPro.cfg
@@ -7,6 +7,9 @@ export SYSTEM_JSON="/mnt/UDISK/system.json"
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH=""
 
+export EVENT_PATH_KEYBOARD="/dev/input/event3"
+export EVENT_PATH_JOYPAD="/dev/input/event4"
+
 # Keycodes
 
 export B_POWER="1 116"
