--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -29,6 +29,9 @@ export B_L2="1 18"
 export B_R1="1 14"
 export B_R2="1 20"
 
+export B_L3="1 317" # used to send virtual keypresses to emulators
+export B_R3="1 318" # used to send virtual keypresses to emulators
+
 export B_START="1 28"
 export B_START_2="enter_pressed" # only registers 0 on release, no 1 on press
 export B_SELECT="1 97"
