Fix controls for gameswitcher

--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -6,6 +6,7 @@ export DISPLAY_HEIGHT="480"
 export SYSTEM_JSON="/config/system.json"
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
+export DEVICE_BRIGHTNESS_PATH="/sys/devices/virtual/disp/disp/attr/lcdbl"
 
 export EVENT_PATH_KEYBOARD="/dev/input/event3"
 export EVENT_PATH_JOYPAD="/dev/input/event4"
