--- a/spruce/settings/platform/Brick.cfg
+++ b/spruce/settings/platform/Brick.cfg
@@ -6,6 +6,7 @@ export DISPLAY_HEIGHT="768"
 export SYSTEM_JSON="/mnt/UDISK/system.json"
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH=""
+export DEVICE_BRIGHTNESS_PATH=""
 
 export PYSDL2_DLL_PATH="/mnt/sdcard/MIYOO_EX/site-packages/sdl2dll/dll"
 export PATH="/mnt/sdcard/MIYOO_EX/bin/:$PATH"
