--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -6,6 +6,7 @@ export DISPLAY_HEIGHT="480"
 export SYSTEM_JSON="/userdata/system.json"
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/class/leds/work"
+export DEVICE_BRIGHTNESS_PATH="/sys/class/backlight/backlight/brightness"
 
 export PYSDL2_DLL_PATH="/mnt/sdcard/MIYOO_EX/site-packages/sdl2dll/dll"
 export PATH="/mnt/sdcard/MIYOO_EX/bin/:$PATH"
