Add setting to toggle auto save/load state for RetroArch

--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -20,6 +20,7 @@ n64_control_profile=Classic
 pico8_control_profile=Racing
 pico8_stretch=1
 ppsspp_pause_exit=1
+ra_auto_state=0
 recentsTile=1
 rumble_intensity=Medium
 runGSOnGameExit=1
