A30: Fix volume controls

--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -38,7 +38,8 @@ export B_START_2="enter_pressed" # only registers 0 on release, no 1 on press
 export B_SELECT="1 97"
 export B_SELECT_2="rctrl_pressed"
 
-export B_VOLUP="volume up"       # only registers on press and on change, not on release. No 1 or 0.
-export B_VOLDOWN="1 114"     # has actual key codes like the buttons
-export B_VOLDOWN_2="volume down" # only registers on change. No 1 or 0.
-export B_MENU="1 1"          # surprisingly functions like a regular button
+export B_VOLUP="1 115"
+export B_VOLUP_2="volume up"
+export B_VOLDOWN="1 114"
+export B_VOLDOWN_2="volume down"
+export B_MENU="1 1"
