feat(homebutton): add aarch64 netcat and enable network cmds for RA on brick and flip
this should let us avoid R3 and L3 as menu and pause hotkeys on these
devices

--- a/spruce/settings/platform/retroarch-Flip.cfg
+++ b/spruce/settings/platform/retroarch-Flip.cfg
@@ -2963,7 +2963,7 @@ netplay_show_passworded = "true"
 netplay_spectate_password = ""
 netplay_start_as_spectator = "false"
 netplay_use_mitm_server = "false"
-network_cmd_enable = "false"
+network_cmd_enable = "true"
 network_cmd_port = "55355"
 network_on_demand_thumbnails = "false"
 notification_show_autoconfig = "false"
