--- a/spruce/settings/platform/retroarch-Brick.cfg
+++ b/spruce/settings/platform/retroarch-Brick.cfg
@@ -3018,7 +3018,7 @@ netplay_spectate_password = ""
 netplay_start_as_spectator = "false"
 netplay_stateless_mode = "false"
 netplay_use_mitm_server = "false"
-network_cmd_enable = "false"
+network_cmd_enable = "true"
 network_cmd_port = "55355"
 network_on_demand_thumbnails = "false"
 notification_show_autoconfig = "false"
