--- a/spruce/settings/platform/SmartPro.cfg
+++ b/spruce/settings/platform/SmartPro.cfg
@@ -25,9 +25,9 @@ export B_X="1 308"
 export B_Y="1 307"
 
 export B_L1="1 310"
-export B_L2="3 2 2" # 255 on push, 0 on release
+export B_L2="3 2 255" # 255 on push, 0 on release
 export B_R1="1 311"
-export B_R2="3 5" # 255 on push, 0 on release
+export B_R2="3 5 255" # 255 on push, 0 on release
 
 export B_L3="1 317" # also logs left fnkey stuff
 export B_R3="1 318" # also logs right fnkey stuff
