Use default usb icon for new app

--- a/App/USBStorageMode/config.json
+++ b/App/USBStorageMode/config.json
@@ -1,6 +1,6 @@
 {
 	"label":        "USB Storage Mode",
-	"icon":	        "",
+	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/icons/app/usb.png",
 	"launch":       "launch.sh",
 	"description":  "Transfer files over USB"
 }
