--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -14,6 +14,7 @@ export HOME="/mnt/sdcard"
 
 export EVENT_PATH_KEYBOARD="/dev/input/event5"
 export EVENT_PATH_JOYPAD="/dev/input/event5"
+export EVENT_PATH_VOLUME="/dev/input/event0"
 
 # Keycodes
 
