fix(buttons_watchdog): actually fix volume handling for flip

--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -58,3 +58,25 @@ export STICK_LEFT_2="3 4 -32767" # negative for left
 export STICK_RIGHT_2="3 4 32767" # positive for right
 export STICK_UP_2="3 3 -32767"   # negative for up
 export STICK_DOWN_2="3 3 32767"  # positive for down
+
+export SYSTEM_VOLUME_0="0"
+export SYSTEM_VOLUME_1="5"
+export SYSTEM_VOLUME_2="10"
+export SYSTEM_VOLUME_3="15"
+export SYSTEM_VOLUME_4="20"
+export SYSTEM_VOLUME_5="25"
+export SYSTEM_VOLUME_6="30"
+export SYSTEM_VOLUME_7="35"
+export SYSTEM_VOLUME_8="40"
+export SYSTEM_VOLUME_9="45"
+export SYSTEM_VOLUME_10="50"
+export SYSTEM_VOLUME_11="55"
+export SYSTEM_VOLUME_12="60"
+export SYSTEM_VOLUME_13="65"
+export SYSTEM_VOLUME_14="70"
+export SYSTEM_VOLUME_15="75"
+export SYSTEM_VOLUME_16="80"
+export SYSTEM_VOLUME_17="85"
+export SYSTEM_VOLUME_18="90"
+export SYSTEM_VOLUME_19="95"
+export SYSTEM_VOLUME_20="100"
