Brightness values now platform-specific; hardcode LCD frequency on Flip; extend min and max brightness on Flip

--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -65,3 +65,15 @@ export SYSTEM_VOLUME_17="216"
 export SYSTEM_VOLUME_18="229"
 export SYSTEM_VOLUME_19="242"
 export SYSTEM_VOLUME_20="255"
+
+export SYSTEM_BRIGHTNESS_0="2"
+export SYSTEM_BRIGHTNESS_1="8"
+export SYSTEM_BRIGHTNESS_2="18"
+export SYSTEM_BRIGHTNESS_3="32"
+export SYSTEM_BRIGHTNESS_4="50"
+export SYSTEM_BRIGHTNESS_5="72"
+export SYSTEM_BRIGHTNESS_6="98"
+export SYSTEM_BRIGHTNESS_7="128"
+export SYSTEM_BRIGHTNESS_8="162"
+export SYSTEM_BRIGHTNESS_9="200"
+export SYSTEM_BRIGHTNESS_10="255"
