--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -80,3 +80,15 @@ export SYSTEM_VOLUME_17="85"
 export SYSTEM_VOLUME_18="90"
 export SYSTEM_VOLUME_19="95"
 export SYSTEM_VOLUME_20="100"
+
+export SYSTEM_BRIGHTNESS_0="1"
+export SYSTEM_BRIGHTNESS_1="20"
+export SYSTEM_BRIGHTNESS_2="35"
+export SYSTEM_BRIGHTNESS_3="45"
+export SYSTEM_BRIGHTNESS_4="60"
+export SYSTEM_BRIGHTNESS_5="80"
+export SYSTEM_BRIGHTNESS_6="100"
+export SYSTEM_BRIGHTNESS_7="120"
+export SYSTEM_BRIGHTNESS_8="150"
+export SYSTEM_BRIGHTNESS_9="180"
+export SYSTEM_BRIGHTNESS_10="220"
