--- a/App/-FirmwareUpdate-/config.json
+++ b/App/-FirmwareUpdate-/config.json
@@ -1,5 +1,5 @@
 {
-  "#label": "A Firmware Update Is Available",
+  "label": "A Firmware Update Is Available",
   "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/App/firmwareupdate.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/app/firmwareupdate.png",
   "launch": "launch.sh",
