Don't error if combined file isnt there to delete

--- a/.github/workflows/create-nightly.yml
+++ b/.github/workflows/create-nightly.yml
@@ -74,12 +74,12 @@ jobs:
 
       - name: Recombine large files
         run: |
-          rm spruce/flip/miyoo355_rootfs_32.img
+          rm -f spruce/flip/miyoo355_rootfs_32.img
           cat spruce/flip/miyoo355_rootfs_32.img_part* > spruce/flip/miyoo355_rootfs_32.img
-          rm spruce/flip/miyoo355_rootfs_32.img_part*
-          rm spruce/flip/muOS-pixie-reduced.sqsh
+          rm -f spruce/flip/miyoo355_rootfs_32.img_part*
+          rm -f spruce/flip/muOS-pixie-reduced.sqsh
           cat spruce/flip/muOS-pixie-reduced.sqsh-part* > spruce/flip/muOS-pixie-reduced.sqsh
-          rm spruce/flip/muOS-pixie-reduced.sqsh-part*
+          rm -f spruce/flip/muOS-pixie-reduced.sqsh-part*
 
       - name: Create 7z archive
         run: |
