--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Require approval from admins for changes to the .github folder
-.github/ @XanXic @Sundownersport
+.github/ @XanXic @Sundownersport @ryanmsartor
