--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -49,15 +49,19 @@ export B_VOLDOWN="1 114" # has actual key codes like the buttons
 export B_VOLDOWN_2="volume down" # only registers 0 on release, no 1.
 export B_MENU="1 316"
 
-export STICK_LEFT="3 0 -32767" # negative for left
-export STICK_RIGHT="3 0 32767" # positive for right
-export STICK_UP="3 1 -32767"   # negative for up
-export STICK_DOWN="3 1 32767"  # positive for down
+#Range from -32k to 32k for all of these. No obvious/direct
+#numbers for left/right/up/down
+export STICK_LEFT="3 0" 
+export STICK_RIGHT="3 0"
+export STICK_UP="3 1"   
+export STICK_DOWN="3 1" 
 
-export STICK_LEFT_2="3 4 -32767" # negative for left
-export STICK_RIGHT_2="3 4 32767" # positive for right
-export STICK_UP_2="3 3 -32767"   # negative for up
-export STICK_DOWN_2="3 3 32767"  # positive for down
+#Range from -32k to 32k for all of these. No obvious/direct
+#numbers for left/right/up/down
+export STICK_LEFT_2="3 4"
+export STICK_RIGHT_2="3 4"
+export STICK_UP_2="3 3"  
+export STICK_DOWN_2="3 3" 
 
 export SYSTEM_VOLUME_0="0"
 export SYSTEM_VOLUME_1="5"
