lil bit of cleanup

--- a/spruce/settings/platform/Brick.cfg
+++ b/spruce/settings/platform/Brick.cfg
@@ -8,9 +8,7 @@ export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH=""
 export DEVICE_BRIGHTNESS_PATH=""
 
-export PYSDL2_DLL_PATH="/mnt/sdcard/MIYOO_EX/site-packages/sdl2dll/dll"
-export PATH="/mnt/sdcard/MIYOO_EX/bin/:$PATH"
-export HOME="/mnt/sdcard"
+export HOME="/mnt/SDCARD"
 
 export EVENT_PATH_KEYBOARD="/dev/input/event3"
 export EVENT_PATH_JOYPAD="/dev/input/event4"
