display(): more unix-compliant; abstract more of this function's variables out to PLATFORM.cfg

--- a/spruce/settings/platform/SmartPro.cfg
+++ b/spruce/settings/platform/SmartPro.cfg
@@ -3,6 +3,7 @@
 
 export DISPLAY_WIDTH="1280"
 export DISPLAY_HEIGHT="720"
+export DISPLAY_ROTATION="0"
 export SYSTEM_JSON="/mnt/UDISK/system.json"
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH=""
