--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -3,6 +3,7 @@
 
 export DISPLAY_WIDTH="640"
 export DISPLAY_HEIGHT="480"
+export DISPLAY_ROTATION="270"
 export SYSTEM_JSON="/config/system.json"
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
