Add an extra prop to indicate bottom bar is hidden in SPRUCE theme

--- a/Themes/SPRUCE/config.json
+++ b/Themes/SPRUCE/config.json
@@ -2,6 +2,7 @@
     "name": "Spruce",
     "author": "tenlevels",
     "description": "spruce theme for a30",
+    "showBottomBar": false,
     "batteryPercentage": {
         "color": "#EBDBB2",
         "font": "nunwen.ttf",
