helperFunctions: cleanup; better posix compliance for better portability; improved RO check; better communication when disconnecting from check_and_connect;

--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -12,6 +12,9 @@ export DEVICE_BRIGHTNESS_PATH="/sys/devices/virtual/disp/disp/attr/lcdbl"
 export EVENT_PATH_KEYBOARD="/dev/input/event3"
 export EVENT_PATH_JOYPAD="/dev/input/event4"
 
+export SD_DEV="/dev/mmcblk0p1"
+
+
 # Keycodes
 
 export B_POWER="1 116"
