--- a/spruce/settings/platform/Brick.cfg
+++ b/spruce/settings/platform/Brick.cfg
@@ -14,6 +14,9 @@ export HOME="/mnt/SDCARD"
 export EVENT_PATH_KEYBOARD="/dev/input/event3"
 export EVENT_PATH_JOYPAD="/dev/input/event4"
 
+export SD_DEV="/dev/mmcblk1p1"
+
+
 # Keycodes
 
 export B_POWER="1 116"
