--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -15,6 +15,9 @@ export EVENT_PATH_KEYBOARD="/dev/input/event5"
 export EVENT_PATH_JOYPAD="/dev/input/event5"
 export EVENT_PATH_VOLUME="/dev/input/event0"
 
+export SD_DEV="/dev/mmcblk1p1"
+
+
 # Keycodes
 
 export B_POWER="1 116"
