--- a/spruce/settings/platform/SmartPro.cfg
+++ b/spruce/settings/platform/SmartPro.cfg
@@ -11,6 +11,9 @@ export LED_PATH=""
 export EVENT_PATH_KEYBOARD="/dev/input/event3"
 export EVENT_PATH_JOYPAD="/dev/input/event4"
 
+export SD_DEV="/dev/mmcblk1p1"
+
+
 # Keycodes
 
 export B_POWER="1 116"
