All: now use emufresh.py; put DEVICE_PYTHON3_PATH into  PLATFORM.cfg

--- a/spruce/settings/platform/A30.cfg
+++ b/spruce/settings/platform/A30.cfg
@@ -14,6 +14,7 @@ export EVENT_PATH_JOYPAD="/dev/input/event4"
 
 export SD_DEV="/dev/mmcblk0p1"
 
+export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/bin/Python3/bin/python3
 
 # Keycodes
 
