--- a/spruce/settings/platform/Brick.cfg
+++ b/spruce/settings/platform/Brick.cfg
@@ -16,6 +16,8 @@ export EVENT_PATH_JOYPAD="/dev/input/event4"
 
 export SD_DEV="/dev/mmcblk1p1"
 
+export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
+
 
 # Keycodes
 
