--- a/spruce/settings/platform/Flip.cfg
+++ b/spruce/settings/platform/Flip.cfg
@@ -17,6 +17,8 @@ export EVENT_PATH_VOLUME="/dev/input/event0"
 
 export SD_DEV="/dev/mmcblk1p1"
 
+export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
+
 
 # Keycodes
 
