Update PyUI to 63f9eb77c0147c9d70a14cb1d0791353d8f09576
Try setting the hold delay to only apply on the inital check
Move hold delay into the PyUI config
Break apart basic and advance settings
Rename luminance to backlight
Load popup-menu info from theme
Fix text on popup menus looking off
Fix file name for popup text list view
Better popup menu themeing/support
Rename to turbo delay and follow json key naming conventions
Add game search when highlighting a system in the system select menu
Add some padding to the on screen keyboard

--- a/App/PyUI/main-ui/config.json
+++ b/App/PyUI/main-ui/config.json
@@ -1,4 +1,5 @@
 {
     "theme": "SPRUCE",
-    "theme_dir": "/mnt/SDCARD/Themes/"
+    "themeDir": "/mnt/SDCARD/Themes/",
+    "turboDelayMs": 300
 }
